# MolManager

./: .gitattributes  .gitignore  BACKLOG.md  ChemManager v1.1 update.txt  ChemManager v1.2 update.txt  ChemManager v1.3 update.txt  ChemManager v1.4 update.txt  README.md  pyproject.toml  pytest.ini  requirements-all.txt  requirements-boltz.txt  requirements-dev.txt  requirements-permeability.txt  requirements-pka.txt  requirements-pytorch-cpu.txt  requirements.txt
chemmanager/: __init__.py  app.py  bundled_paths.py  config.py  confs_codec.py  dimensionality_reduction.py  display_constants.py  fragment_decomposition.py  medchem_descriptors.py  performance.py  pkasolver_descriptor_support.py  rdkit_env.py  science_citations.py  surechembl_api.py  utils.py
docs/: ARCHITECTURE.md  PACKAGING.md  STEREO_AND_ISOMERISM.md  VALENCE_BONDS_AND_AROMATICITY.md
molmanager/: app.py  bundled_paths.py  column_log_transform.py  config.py  conformer_output.py  confs_codec.py  descriptor_reuse.py  dimensionality_reduction.py  display_constants.py  feature_matrix.py  filter_compute.py  fingerprint_cache.py  fragment_decomposition.py  fragment_disconnect.py  fragment_recomposition_filters.py  import_structure.py  ingest_cells.py  ingest_text.py  lazy_mol_store.py  medchem_descriptors.py  medchem_space.py  memory_guards.py  memory_usage.py  microstate_cache.py  permeability_prediction.py  pkasolver_descriptor_support.py  plot_analysis.py  plot_color.py  plot_heatmap.py  plot_radar.py  prepare_structures_parallel.py  qsar.py  rdkit_env.py  rdkit_fingerprints.py  reaction_enumeration.py  safe_calc.py  science_citations.py  sdf_parallel.py  smarts_patterns.py  structure_draw.py  (+6 more)
packaging/: chemmanager.spec  molmanager.spec
samples/: README.md  example_chem.db  example_structures.sdf  fda_subset.sdf  samplesession.cms  test.sdf
scripts/: benchmark_large_table.py  benchmark_ui_workflows.py  bootstrap_gnn_mtl_model.py  bootstrap_optional_tools.ps1  bootstrap_optional_tools.sh  install_pytorch_pka.ps1  install_pytorch_pka.sh  perf_gate.py  split_chemistry_mixin.py
tests/: conftest.py  test_acs_sketch_style.py  test_add_explicit_hydrogens.py  test_alkene_stereo.py  test_background_activity.py  test_background_jobs.py  test_bundled_paths.py  test_cluster_cancel_partial.py  test_cluster_sphere_exclusion.py  test_column_log_transform.py  test_compound_table_model.py  test_compound_table_model_batch.py  test_config.py  (+99 more)
(+207 files in other folders)
