[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chemmanager"
version = "0.1.0"
description = "Desktop chemistry table manager (PyQt5 + RDKit)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "ChemManager contributors" }]
dependencies = [
    "PyQt5>=5.15",
    "PyQtWebEngine>=5.15",
    "plotly>=5.0,<6",
    "numpy>=1.24,<2",
    "pandas>=2.0",
    "scipy>=1.10",
    "sqlalchemy>=2.0",
    "pubchempy>=1.0.4",
    "chembl_webresource_client>=0.10.9",
    "rdkit-pypi>=2022.9.5",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
pka = [
    "pkasolver @ git+https://github.com/mayrf/pkasolver.git",
    "torch-geometric==2.0.1",
    "svgutils",
]
boltz = ["boltz>=2.0.0"]
dev = ["pytest>=7.4,<9"]

[project.scripts]
chemmanager = "chemmanager.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chemmanager*"]

[tool.setuptools.package-data]
chemmanager = [
    "ui/static/*",
    "resources/README.md",
    "resources/bin/**/.gitkeep",
]
