[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "molmanager"
version = "0.1.0"
description = "Desktop chemistry table manager (PyQt5 + RDKit)"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "Proprietary" }
authors = [{ name = "MolManager contributors" }]
dependencies = [
    "PyQt5>=5.15",
    "PyQtWebEngine>=5.15",
    "plotly>=5.0,<6",
    "numpy>=1.24,<2",
    "pandas>=2.0",
    "scipy>=1.10",
    "sqlalchemy>=2.0",
    "pubchempy>=1.0.4",
    "chembl_webresource_client>=0.10.9",
    "rdkit>=2023.3.1",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
pka = [
    "pkasolver @ git+https://github.com/mayrf/pkasolver.git",
    "torch-geometric==2.0.1",
    "svgutils",
]
boltz = ["boltz>=2.0.0"]
permeability = [
    "chemprop>=2.1.0,<2.3",
    "lightning>=2.0,<3",
]
dev = ["pytest>=7.4,<9"]

[project.scripts]
molmanager = "molmanager.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["molmanager*"]

[tool.setuptools.package-data]
molmanager = [
    "ui/static/*",
    "resources/README.md",
    "resources/models/**/README.md",
    "resources/models/**/.gitkeep",
    "resources/bin/**/.gitkeep",
]
